[package]
name = "libsql-orm"
version = "0.2.5"
edition = "2021"
authors = ["Ayon Saha <ayonsaha2011@gmail.com>"]
description = "A powerful, async-first ORM for Turso Database with first-class support for Cloudflare Workers and WebAssembly environments. Features include automatic boolean conversion, upsert operations, built-in logging, migrations, and comprehensive query building."
documentation = "https://docs.rs/libsql-orm"
homepage = "https://github.com/ayonsaha2011/libsql-orm"
repository = "https://github.com/ayonsaha2011/libsql-orm"
license = "MIT"
readme = "README.md"
keywords = ["orm", "turso", "database", "sqlite", "wasm"]
categories = ["database", "web-programming", "wasm", "asynchronous"]
exclude = [
  "target/",
  ".git/",
  ".gitignore",
  "tests/",
  "BOOLEAN_CONVERSION_FIX.md",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# libsql is only available for non-WASM targets due to C dependencies
libsql = { version = "0.9", default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
uuid = { version = "1.0", features = ["v4", "serde", "js"], optional = true }
libsql-orm-macros = { version = "0.1", path = "./libsql-orm-macros", optional = true }
anyhow = { version = "1.0", optional = true }
worker = { version = ">=0.7.0", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
getrandom = { version = "0.2", features = ["js"] }
log = "0.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }
env_logger = "0.10"

[features]
default = ["libsql_default"]
cloudflare = ["libsql", "worker", "web-sys", "getrandom/js", "dep:serde", "dep:serde_json", "dep:chrono", "dep:uuid", "dep:libsql-orm-macros", "dep:anyhow"]
libsql_default = ["libsql", "dep:serde", "dep:serde_json", "dep:chrono", "dep:uuid", "dep:libsql-orm-macros", "dep:anyhow"]
libsql = ["dep:libsql"]
native = ["libsql"]
wasm_only = ["worker", "web-sys", "getrandom/js"]

[lib]
name = "libsql_orm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]


[workspace]
members = [".", "libsql-orm-macros"]
resolver = "2"

[workspace.dependencies]
worker = ">=0.7.0"


# Use git version of libsql with newer worker dependency
[patch.crates-io]
libsql = { git = "https://github.com/ayonsaha2011/libsql", rev = "fe17aadb6a8a3381caa0a4c542f7c14fd323d6ab", features = ["cloudflare"] }

# Target-specific configurations for libsql
[target.'cfg(target_arch = "wasm32")'.dependencies]
libsql = { version = "0.9", default-features = false, features = ["cloudflare"], optional = true }






